--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Welcome!</title>
+        <link rel="stylesheet" href="./main.css">
+        <link rel="icon" href="/time.gif">
+    </head>
+    <body>
+        <main>
+        <h1>Welcome.</h1>
+        </br>
+        </main>
+	    <canvas id="mesh"></canvas>
+        <p>I hope you're well.</p>
+        <p>This is just an experiment really.</p>
+        <p>But I hope you enjoy it.</p>
+        <p></p>
+        <script src="nodes.js"></script>
+    </body>
+
+</html>
