--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </main>
 	    <canvas id="mesh"></canvas>
         <p>I hope you're well.</p>
-        <p>This is just an experiment really.</p>
+        <p>This page is under construction.</p>
         <p>But I hope you enjoy it.</p>
         <p></p>
         <script src="nodes.js"></script>
