--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+        <div class="help">
+            <div id="help-button">?</div>
+            <span class="help_text">Click anywhere to add another node. (The more you add, the worse the performance will be)</span>
+        </div>
         <main>
-        <h1>Welcome.</h1>
-        <br>
+            <h1>Welcome.</h1>
+            <br>
         </main>
 	    <canvas id="mesh"></canvas>
         <p>I hope you're well.</p>
