--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="help">
             <div id="help-button">?</div>
-            <span class="help_text">Click anywhere to add another node. (The more you add, the worse the performance will be)</span>
+            <span class="help_text">Click anywhere to add another node.</span>
         </div>
         <main>
             <h1>Welcome.</h1>
