Define sections more clearly

--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
             <div id="help-button">?</div>
             <span class="help_text">Click anywhere to add another node (Max. 1000 nodes)</span>
         </div>
-        <main>
+        <div id="nodes" class="section">
             <h1>Welcome.</h1>
             <br>
-        </main>
-	    <canvas id="mesh"></canvas>
-        <p>I hope you're well.</p>
-        <p>This page is under construction.</p>
-        <p>But I hope you enjoy it.</p>
+    	    <canvas id="node-canvas"></canvas>
+            <script src="nodes.js"></script>
+        </div>
+        <div id="flocking" class="section">
+            <p>I hope you're well.</p>
+        </div>
+        <div id="section-3" class="section">
+            <p>This page is under construction.</p>
+        </div>
+        <div id="section-4" class="section">
+            <p>But I hope you enjoy it.</p>
+        </div>
         <p></p>
-        <script src="nodes.js"></script>
+
     </body>
 
 </html>
