--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <script src="nodes.js"></script>
             <div class="options">
                 <h2 id="node-options">Options</h2>
-                <label for="node-count"  id="node-num-label">Number of Nodes</label>
-                <input type="range" min="2" max="1000" value="200" class="slider" id="node-count">
-                <label for="connection-count" id="node-conn-label">Number of Connections</label>
-                <input type="range" min="1" max="20" value="7" class="slider" id="connection-count">
-                <label for="node-speed"  id="node-speed-label">Node Speed</label>
-                <input type="range" min="0" max="100" value="0.8" class="slider" id="node-speed">
-                <label for="node-path-straightness"  id="node-path-label">Node Path Straightness</label>
+                <label for="node-count"  id="node-num-label">Number of Nodes</label><br>
+                <input type="range" min="2" max="1000" value="200" class="slider" id="node-count"><br>
+                <label for="connection-count" id="node-conn-label">Number of Connections</label><br>
+                <input type="range" min="1" max="20" value="7" class="slider" id="connection-count"><br>
+                <label for="node-speed"  id="node-speed-label">Node Speed</label><br>
+                <input type="range" min="0" max="100" value="0.8" class="slider" id="node-speed"><br>
+                <label for="node-path-straightness"  id="node-path-label">Node Path Straightness</label><br>
                 <input type="range" min="0" max="1000" value="967" class="slider" id="node-path-straightness">
             </div>
         </div>
