--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <input type="range" min="0" max="500" value="50" class="slider" id="bird-alignment"><br>
                 <label for="bird-eyesight"  id="bird-eyesight-label">Sight Distance</label><br>
                 <input type="range" min="0" max="1000" value="80" class="slider" id="bird-eyesight"><br>
+                <label for="bird-3d"  id="bird-3d-label">3D Sky</label><br>
+                <input type="checkbox"  value="false" id="bird-3d"><br>
             </div>
         </div>
         <div id="section-3" class="section">
