--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     </body>
     <script src="nodes.js"></script>
-    <script src="flock.js"></script>
+    <script type="text/javascript"  src="https://cdn.jsdelivr.net/gh/m-darwall/boids@latest/flock.js"></script>
     <script>
         //get translations from file
         async function fetchTranslations() {
