--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="A site with some interactive projects I made on it.">
+        <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>M Darwall</title>
